Fix compilation failure issue
Signed-off-by: zane-neo <zaniu@amazon.com>